updated board response to include next turn
